# MovieManager

./: settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  google-services.json
app/src/androidTest/java/com/example/ndroidapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ndroidapp/: DetailActivity.kt  FavoriteActivity.kt  LoginActivity.kt  MainActivity.kt  MovieActivity.kt  ProfileActivity.kt  RegisterActivity.kt  VideoPlayerActivity.kt
app/src/main/java/com/example/ndroidapp/Domain/: Category.kt  CategoryResponse.kt  Datum.java  FilmItem.kt  ListFilm.java  Metadata.java  MovieActor.kt  MovieDetails.kt  SliderItems.kt
app/src/main/java/com/example/ndroidapp/adapters/: ActorAdapter.kt  CategoryListAdapter.kt  (+3 more)
app/src/main/res/drawable/: edittext_background.xml  error_image.xml  item_favorite_movie.xml  placeholder_image.xml  rounded_image.xml
app/src/main/res/layout/: activity_favorite.xml  activity_login.xml  activity_main.xml  activity_movie.xml  activity_profile.xml  activity_register.xml  activity_video_player.xml  deteil_activity.xml  fragment_dashboard.xml  fragment_favorites.xml  fragment_home.xml  fragment_profile.xml  fragment_search.xml  fragment_settings.xml  item_actor.xml  item_movie.xml  slider_item.xml  viewholder_actor.xml  viewholder_category.xml  viewholder_film.xml
app/src/main/res/menu/: bottom_navigation_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/ndroidapp/: ExampleUnitTest.kt
(+7 files in other folders)
